2010-08-09  David Reveman  <davidr@novell.com>

	* bitmapcache.h:
	* bitmapcache.cpp: Add CacheMode::GetTransform function.

2010-08-07  David Reveman  <davidr@novell.com>

	* writeablebitmap.cpp (Render): Don't clear the surface
	everytime we render to it.

	* shape.cpp (DoDraw):
	* uielement.h:
	* uielement.cpp: Remove ApplyTransform and use relative
	instead of absolute transformations and bounds. Front-to-back
	rendering still requires use of absolute transformations and
	bounds.

	* border.cpp (InsideObject):
	* media.cpp (InsideObject):
	* shape.cpp (InsideObject): Use cairo_set_matrix instead of
	ApplyTransform.

	* uielement.h:
	* uielement.cpp: Remove uielement_xform_key, which is no
	longer needed. Remove use of occlusion culling from
	UIElement::Paint as absolute transformations and bounds
	are invalid when this function is used.

2010-08-06  David Reveman  <davidr@novell.com>

	* uielement.h:
	* uielement.cpp: Remove render_projection member and adjust
	perspective transformation code to not rely on absolute
	transformations during a render pass.

	* rect.h:
	* rect.cpp: Add Rect::Transform (cairo_t *cr).

	* shape.cpp (DoDraw): Use extents instead of bounds.

	* uielement.cpp: Don't use GetLocalBounds in back-to-front
	render pass.

	* border.cpp (Render):
	* glyphs.cpp (Render):
	* media.cpp (Render):
	* mediaelement.cpp (Render):
	* panel.cpp (Render):
	* richtextbox.cpp (Render):
	* shape.cpp (DoDraw):
	* stylus.cpp (PostRender):
	* textbox.cpp (Render):
	* uielement.cpp (RenderClipPath): Remove unnecessary use of
	ApplyTransform.

2010-08-05  David Reveman  <davidr@novell.com>

	* uielement.cpp (ComputeTransform): Use Matrix3D::Init instead
	of memcpy. Look for RENDER_PROJECTION flag instead of
	projection property when determening whether we inherit an
	affine or perspective transformation.

	* projection.h:
	* projection.cpp: Add Matrix3D::Init.

	* effect.h:
	* effect.cpp: Add MAX_SHADOW_DEPTH and clamp drop shadow